css/main.css
/* ... */
footer .social-icons p {
  background-color: #527158;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
}

footer .social-icons p i {
  font-size: 1.3125em;
}

footer .copyright {
  margin: 20px 0;
}

/**** Mobile Styles --- Homepage ****/

.hero-area {
  background: url('../img/hero-image.jpg') center no-repeat #333;
  background-size: cover;
  background-position: center;
  min-height: 500px;
  color: #ffffff;
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
}

.hero-area h1 {
  font-size: 2.25em;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  line-height: 1.2;
}

aside {
  background-color: #527158;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

aside .form {
  margin-top: 30px;
}

input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-style: italic;
  padding: 1em;
}

input[type=button] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}

/** Features **/

.features {
  background: url("../img/features-image.jpg");
  background-size: cover;
  background-position: center;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column;
}

.features h2 {
 margin-bottom: 60px;
}

.features article {
 width: 63%;
 margin: 30px 0;
}

.features .features-items {
 display: flex;
 justify-content: center;
 align-items: center;
 flex-flow: row wrap;
}

.features p {
  text-align: center;
  margin: 0;
}

.features i {
	font-size: 3.75em;
  margin-bottom: 40px;
}

.reviews {
  background-color: #2a423a;
  color: #ffffff;
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
}

.reviews i {
	font-size: 3.75em;
  margin-bottom: 40px;
}

.reviews h2 {
  margin-bottom: 40px;
  line-height: 1;
}

.reviews h3 {
  width: 55%;
  margin: 20px 0;
}

/* ======================================================================
  About page
  ===================================================================== */

.mission {
  background-color: #527158;
  color: #ffffff;
  display: flex;
  justify-content:center;
  align-items: center;
  flex-flow: row wrap;
}

.map figure {
  padding-bottom: 125%;
  position: relative;
  overflow: hidden;
  width: 100%;
  height: 0;
}
.map iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.contact-section {
  background-color: #2a423a;
  color: #ffffff;
  display: flex;
  justify-content:center;
  align-items: center;
  flex-flow: row wrap;
}

.contact-content p {
  margin: 0;
}

/* =========================================================================
   FAQ page
   ========================================================================= */

.faq {
  background-color: #527158;
  color: #ffffff;
  display: flex;
  justify-content:center;
  align-items: center;
  flex-flow: row wrap;
}

.faq .content-wrapper {
  margin: 50px 0 0 0;
  display: flex;
  justify-content:center;
  align-items: center;
  flex-flow: row wrap;
}

.faq h2 {
  margin-bottom: 40px;
}

.faq-content {
  margin-bottom: 50px;
}

.faq-content h4 {
  line-height: 1.333;
}


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
 * Extends the .sr-only class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
  visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix::before,
.clearfix::after {
  content: " ";
  display: table;
}

.clearfix::after {
  clear: both;
}
/* ... */

